--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,13 @@
-<h2>Quizzy Quiz</h2>
+<div class="topnav">
+  <h2>Quizzy Quiz</h2>
+</div>
 
-<p>Your single page app should go here.</p>
+<div class="sidenav">
+  <a href="/quizzes">All quizzes</a>
+  <ul>
+  </ul>
+</div>
+
+<div class="main-body">
+  <p>The quiz goes here.</p>
+</div>
