quiz navbar; onClick of quiz name, quiz begins; onClick of answer + submit, show for 1 sec if (in)correct then proceeds to next question

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,19 @@
-<div class="topnav">
-  <h2>Quizzy Quiz</h2>
-</div>
 
-<div class="sidenav">
-  <a href="/quizzes">All quizzes</a>
-  <ul>
+<div class="navbar">
+
+  <div class="navbar-header">
+    <span class="create-btn">CREATE QUIZ</span>
+  </div>
+
+  <ul class="all-quizzes">
+    <!-- links to quizzes go here -->
   </ul>
-</div>
+
+</div> <!-- navbar -->
+
 
 <div class="main-body">
-  <p>The quiz goes here.</p>
+
+  Hello! What would you like to do?<br>
+
 </div>
