--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,9 +2,8 @@
 <div class="navbar">
 
   <div class="navbar-header">
-    <span class="create-btn">CREATE QUIZ</span>
+    <a href="#"><span class="nav-main-btn">TAKE QUIZ</span></a>
   </div>
-
   <ul class="all-quizzes">
     <!-- links to quizzes go here -->
   </ul>
@@ -13,7 +12,15 @@
 
 
 <div class="main-body">
+  <strong>ABOUT THIS PROJECT</strong><br>
+  Week 7 project at <a href="https://makersquare.com">MakerSquare</a> (coding bootcamp)<br>
+  Created with: Ruby on Rails, JavaScript, jQuery, HTML, CSS<br><br>
 
-  Hello! What would you like to do?<br>
+  <!-- <strong>KEY CONCEPT IN PRACTICE</strong><br> -->
+  OVERVIEW:<br>
+  <strong>Single-Page Application</strong> to provide fluid user experience<br>
+  <em>Note that the browser does not reload as user navigates the application</em>
+  <br><br><br>
+  Created by: <a href="https://github.com/kixton">Kim Pham</a><br>
 
 </div>
