--- a/app/assets/stylesheets/pham.css
+++ b/app/assets/stylesheets/pham.css
@@ -1,8 +1,13 @@
 html,
 body,
 .container {
+  font-family: Quicksand;
   margin: 0 auto;
-  font-size: 16px;
+  font-size: 20px;
+}
+
+a {
+  font-family: Quicksand;
 }
 
 .logo {
@@ -11,47 +16,59 @@ body,
 
 .navbar {
   float: left;
-  border: 5px solid #ddd;
-  padding: 15px 0;
+  border: 5px solid #000;
   position:absolute;
   width: 250px;
   bottom: 0;
   top: 0;
 }
 
-.navbar-header {
-  text-align: center;
+.nav-main-btn {
+  background: #000;
+  color: #fff;
+  padding: 18px;
+  padding-right: 0px;
+  display: inline-block;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+      box-sizing: border-box;
 }
 
-.create-btn {
-  border: 3px solid #26c6da;
-  color: #00bcd4;
-  padding: 10px 20px;
-  border-radius: 20px;
-  display: inline-block;
-  margin-bottom: 10px;
+.nav-main-btn:hover {
+  background: #000;
 }
+
 
 ul {
   list-style-type: none;
   padding: 0;
+  margin: 0;
 }
 
 ul li a {
-  display: block;
-  background: #80deea;
-  font-size: 16px;
-  padding: 20px;
+  display: inline-block;
+  font-family: Quicksand;
+  font-size: 18px;
   text-decoration: none !important;
+  padding: 20px 0 10px 0;
+  margin-left: 20px;
+  border-bottom: 4px solid transparent;
 }
 
 ul li a:hover {
-  display: block;
-  background: #4dd0e1;
+  background: transparent;
+  color:;
+  border-bottom: 4px solid #000;
+
+}
+
+ul li .active {
+  border-bottom: 4px solid #000;
 }
 
 .main-body {
-  border: 5px solid #ddd;
+  border: 5px solid #000;
   margin-left : 255px;
   padding: 15px;
   position:absolute;
@@ -61,18 +78,27 @@ ul li a:hover {
   right: 0;
 }
 
+.question {
+  font-size: 22px;
+  font-weight: bold;
+}
+
+input[type=radio] {
+  background: transparent;
+  border: 3px solid #000;
+  margin-top: 20px;
+}
+
 .submit {
-  background: #fff;
-  color: #00bcd4;
-  border: 3px solid #26c6da;
-  border-radius: 30px;
+  background: transparent;
+  border: 3px solid #000;
   font-size: 16px;
   padding: 10px 20px;
   margin: 10px 0;
 }
 
 .submit:hover {
-  background: #26c6da;
+  background: #000;
   color: #fff;
 }
 
