--- a/app/assets/stylesheets/pham.css
+++ b/app/assets/stylesheets/pham.css
@@ -5,19 +5,18 @@
 html,
 body,
 .container,
-.main-body,
-.mc-answer-choices {
+.main-body {
   margin: 0 auto;
   font-size: 20px;
-  height: 100%;
 }
 
 .navbar {
   float: left;
-  border: 5px solid #000;
+  border-right: 5px solid #000;
   position:absolute;
   width: 250px;
   top: 0;
+  bottom: 0;
 }
 
 .nav-main-btn {
@@ -66,14 +65,15 @@ ul li .active {
 }
 
 .main-body {
-  border: 5px solid #000;
-  margin-left : 255px;
+  border-left: 5px solid #000;
+  margin-left : 250px;
   padding: 15px;
-/*  position:absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;*/
+}
+
+.create-quiz-div {
+  border-left: 5px solid #000;
+  margin-left: -20px;
+  padding-left: 20px;
 }
 
 .question {
@@ -120,10 +120,14 @@ a {
 }
 
 .quiz-question {
-  margin-left: 60px;  
+  margin-left: 75px;  
 }
 
 .correct-label {
   color: #666;
   font-style: italic;
+}
+
+.add-question {
+  text-decoration: none !important;
 }
