--- a/app/assets/stylesheets/pham.css
+++ b/app/assets/stylesheets/pham.css
@@ -104,7 +104,7 @@ a {
 .textbox {
   background:;
   font-size: 22px;
-  border: 3px solid #000;
+  border: 1px solid #000;
   padding: 5px;
   margin: 10px 0 10px 20px;
   width: 350px;
@@ -128,6 +128,7 @@ a {
   font-style: italic;
 }
 
-.add-question {
+.add-question,
+.remove-question {
   text-decoration: none !important;
 }
