--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,7 @@
 
   <div class="about-project" style="display:none">
     <strong>ABOUT</strong><br>
-    Week 7 project at <a href='https://makersquare.com'>MakerSquare</a> (coding bootcamp)<br>
+    Week 7 project at <a href='https://makersquare.com'>MakerSquare</a> (full-time software development training)<br>
     Concept in practice: Single-Page Application to provide fluid user experience<br>
     <em>(Note that the browser does not reload as user navigates the application)</em><br><br>
     Created with: Ruby on Rails, JavaScript, jQuery, Underscore.js, HTML, CSS<br>
@@ -42,7 +42,7 @@
 </div> <!-- main-body -->
 
 <div class="new-question" question-id="" style="display:none">
-  Question #<span class="question-num"></span>
+  Question<span class="question-num"></span>
   <input type="text" name="quiz" class="textbox quiz-question"><br><br>
 
   Type of Question:
@@ -51,8 +51,11 @@
   <input type="radio" name="question-type" value="fill" class="answer-choice"> Fill in the Blank<br><br>
   
   <div class="create-answers">
+    <!-- answer options go here: multiple choice, true/false, or fill-in-the-blank -->
   </div>
   
+  <a href="#" class="remove-question"><i class="fa fa-remove"></i> Remove question</a><br><br>
+
 <hr>
 
 </div>
@@ -79,7 +82,6 @@
     <input type="radio" name="correct-answer"> 
     <span class="correct-label">This is the correct answer</span><br><br>
 
-  <i class="fa fa-remove"></i> Remove question<br><br>
 </div>
 
 <div class="tf-answer-choices" style="display:none">
@@ -91,13 +93,12 @@
     <input type="radio" name="correct-answer"> 
     <span class="correct-label">This is the correct answer</span><br><br>
 
-  <i class="fa fa-remove"></i> Remove question<br><br>
 </div>
 
 <div class="fill-answer-choice" style="display:none">
   Correct Answer:
   <input type="text" name="fill-answer" class="textbox fill-box"><br><br>
-  <i class="fa fa-remove"></i> Remove question<br><br>
+  
 </div>
 
 
