--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -46,7 +46,8 @@
   <input type="text" name="quiz" class="textbox quiz-question"><br><br>
 
   Type of Question:
-  <input type="radio" name="question-type" value="multiple" class="answer-choice"> Multiple Choice 
+  <input type="radio" name="question-type" value="multiple" class="answer-choice">
+  Multiple Choice 
   <input type="radio" name="question-type" value="boolean" class="answer-choice"> True/False 
   <input type="radio" name="question-type" value="fill" class="answer-choice"> Fill in the Blank<br><br>
   
@@ -64,32 +65,32 @@
 <div class="mc-answer-choices" style="display:none">
   Answer Choice:
     <input type="text" name="answer" class="textbox multi-box"> 
-    <input type="radio" name="correct-answer"> 
+    <input type="radio" name="correct-answer" class="answer-choice"> 
     <span class="correct-label">This is the correct answer</span><br>
 
   Answer Choice:
     <input type="text" name="answer" class="textbox multi-box"> 
-    <input type="radio" name="correct-answer"> 
+    <input type="radio" name="correct-answer" class="answer-choice"> 
     <span class="correct-label">This is the correct answer</span><br>
 
   Answer Choice:
     <input type="text" name="answer" class="textbox multi-box"> 
-    <input type="radio" name="correct-answer"> 
+    <input type="radio" name="correct-answer" class="answer-choice"> 
     <span class="correct-label">This is the correct answer</span><br>
 
   Answer Choice:
     <input type="text" name="answer" class="textbox multi-box"> 
-    <input type="radio" name="correct-answer"> 
+    <input type="radio" name="correct-answer" class="answer-choice"> 
     <span class="correct-label">This is the correct answer</span><br><br>
 
 </div>
 
 <div class="tf-answer-choices" style="display:none">
-  True 
+  <span class="true-choice">True</span> 
     <input type="radio" name="correct-answer"> 
     <span class="correct-label">This is the correct answer</span><br>
 
-  False
+  <span class="false-choice">False</span> 
     <input type="radio" name="correct-answer"> 
     <span class="correct-label">This is the correct answer</span><br><br>
 
