--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,7 @@
 
   <div class="about-project" style="display:none">
     <strong>ABOUT</strong><br>
-    Week 7 project at <a href='https://makersquare.com'>MakerSquare</a> (full-time software development training)<br>
+    Week 7 project at <a href='https://makersquare.com'>MakerSquare</a><br>
     Concept in practice: Single-Page Application to provide fluid user experience<br>
     <em>(Note that the browser does not reload as user navigates the application)</em><br><br>
     Created with: Ruby on Rails, JavaScript, jQuery, Underscore.js, HTML, CSS<br>
@@ -34,7 +34,9 @@
       <hr><br>
       <a href="#" class="add-question"><i class="fa fa-plus"></i> Add question</a><br><br>
 
-      <input type="submit" value="CREATE QUIZ" class="submit">
+      <input type="submit" value="CREATE QUIZ" class="submit-quiz-btn">
+
+      <a class="create-quiz-btn">CREATE QUIZ BTN</a>
     </form>
 
   </div> <!-- create-quiz -->
