create new quiz: title, quiz type, answer choices, correct answer

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,10 @@
 
 <div class="navbar">
-
   <a href="#" class="take-quiz"><span class="nav-main-btn">TAKE A QUIZ</span></a>
   <ul class="all-quizzes" display="none">
     <!-- links to quizzes go here -->
   </ul>
-
   <a href="#" class="create-quiz"><span class="nav-main-btn">CREATE QUIZ</span></a>
-
 </div> <!-- navbar -->
 
 
@@ -16,9 +13,9 @@
   <div class="about-project" style="display:none">
     <strong>ABOUT</strong><br>
     Week 7 project at <a href='https://makersquare.com'>MakerSquare</a><br>
-    Concept in practice: Single-Page Application to provide fluid user experience<br>
+    Concept in practices: Model-View-Controller; Single-Page Application<br>
     <em>(Note that the browser does not reload as user navigates the application)</em><br><br>
-    Created with: Ruby on Rails, JavaScript, jQuery, Underscore.js, HTML, CSS<br>
+    Created with: Ruby on Rails, JavaScript, jQuery, HTML, CSS<br>
     Created by: <a href='https://github.com/kixton'>Kim Pham</a><br>
     </script>
   </div> <!-- about-project -->
@@ -36,7 +33,7 @@
 
       <input type="submit" value="CREATE QUIZ" class="submit-quiz-btn">
 
-      <a class="create-quiz-btn">CREATE QUIZ BTN</a>
+      <!-- <a class="create-quiz-btn">CREATE QUIZ BTN</a> -->
     </form>
 
   </div> <!-- create-quiz -->
