--- a/app/assets/stylesheets/pham.css
+++ b/app/assets/stylesheets/pham.css
@@ -88,7 +88,7 @@ ul li .active {
 .submit,
 .submit-quiz-btn {
   background: transparent;
-  border: 3px solid #000;
+  border: 3px double #000;
   font-size: 16px;
   padding: 10px 20px;
   margin: 10px 0;
